--- a/ReceitasRS/WebContent/WEB-INF/web.xml
+++ b/ReceitasRS/WebContent/WEB-INF/web.xml
@@ -2,16 +2,20 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>receitas-rs</display-name>
   <servlet>
-    <servlet-name>Receitas REST Services</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+    <servlet-name>receitas-rest-services</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
+      <param-name>com.sun.jersey.config.property.packages</param-name>
       <param-value>br.furb.resources</param-value>
     </init-param>
+    <init-param>
+   	  <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+   	  <param-value>true</param-value>
+  	</init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Receitas REST Services</servlet-name>
+    <servlet-name>receitas-rest-services</servlet-name>
     <url-pattern>/*</url-pattern>
   </servlet-mapping>
 </web-app>
