Ajustes no projeto para Deploy com as dependências do projeto ReceitasCore.

--- a/ReceitasRS/.project
+++ b/ReceitasRS/.project
@@ -3,6 +3,7 @@
 	<name>ReceitasRS</name>
 	<comment></comment>
 	<projects>
+		<project>ReceitasCore</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
