--- a/ReceitasRS/WebContent/WEB-INF/web.xml
+++ b/ReceitasRS/WebContent/WEB-INF/web.xml
@@ -6,12 +6,16 @@
     <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>com.sun.jersey.config.property.packages</param-name>
-      <param-value>br.furb.resources</param-value>
+	  <param-value>br.furb.resources</param-value>
     </init-param>
     <init-param>
-   	  <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+	  <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
    	  <param-value>true</param-value>
   	</init-param>
+  	<init-param>
+        <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+        <param-value>br.furb.filters.ResponseFilter</param-value>
+    </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
