--- a/ReceitasWeb/.project
+++ b/ReceitasWeb/.project
@@ -3,6 +3,7 @@
 	<name>ReceitasWeb</name>
 	<comment></comment>
 	<projects>
+		<project>ReceitasCore</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
