--- a/ReceitasRS/.classpath
+++ b/ReceitasRS/.classpath
@@ -17,10 +17,7 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/jettison-1.3.7.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/stax-api-1.0.1.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/wstx-asl-3.2.7.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ReceitasCore">
-		<attributes>
-			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
-		</attributes>
-	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/ReceitasBean"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ReceitasDAO"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
