--- a/ReceitasRS/WebContent/WEB-INF/web.xml
+++ b/ReceitasRS/WebContent/WEB-INF/web.xml
@@ -16,6 +16,14 @@
         <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
         <param-value>br.furb.filters.ResponseFilter</param-value>
     </init-param>
+    <init-param>
+        <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
+        <param-value>br.furb.filters.AuthenticationFilter</param-value>
+    </init-param>
+    <init-param>
+         <param-name>com.sun.jersey.spi.container.ResourceFilters</param-name>
+         <param-value>com.sun.jersey.api.container.filter.RolesAllowedResourceFilterFactory</param-value>
+     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   <servlet-mapping>
